# configuration-setting-service

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/2024-04-10-010625_create_config_setting_table/: down.sql  up.sql
src/: database.rs  error_handler.rs  main.rs  schema.rs
src/configuration_settings/: mod.rs  model.rs  routes.rs
