[package]
edition = "2021"
name = "configuration-setting-service"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
diesel = {version = "2.1.6", features = ["postgres", "r2d2"]}
diesel_migrations = {version = "2.1.0", features = ["postgres"]}
dotenvy = "0.15.7"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
tokio = {version = "1.37.0", features = ["macros", "rt-multi-thread"]}
warp = "0.3.7"
